--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Pastel%20Color%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -639,7 +639,7 @@
 
                         <script>
                         document.getElementById('waButton1').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Monokrom%20:%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Monokrom%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -653,6 +653,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <img src="gambar/contoh6.png" alt="Greeting Card 6">
+                    <span class="product-badge">Terlaris</span>
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Gold</h3>
@@ -667,7 +668,7 @@
 
                         <script>
                         document.getElementById('waButton2').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Gold%20:%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Gold%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -695,7 +696,7 @@
 
                         <script>
                         document.getElementById('waButton3').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Envelope%20:%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Envelope%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -724,7 +725,7 @@
 
                         <script>
                         document.getElementById('waButton4').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Graduation%20:%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Graduation%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -752,7 +753,7 @@
 
                         <script>
                         document.getElementById('waButton5').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Black%20White%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Black%20White%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
@@ -778,7 +779,7 @@
 
                         <script>
                         document.getElementById('waButton6').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Gift%20Box%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Gift%20Box%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
                         });
                         </script>
                     </div>
