--- a/index.html
+++ b/index.html
@@ -616,6 +616,31 @@
                     </div>
                 </div>
             </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh11.png" alt="Greeting Card 6">
+                    <span class="product-badge">Baru!</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Message In A Bottle</h3>
+                    <p class="product-description">Botol berisi surat yang hanyut di tengah lautan.</p>
+                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-actions">
+                        <a href="botol.html" class="btn btn-beige">Preview</a>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                        <button id="waButton9" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton9').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Bottle%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
+                        });
+                        </script>
+                    </div>
+                </div>
+            </div>
             
             <!-- Product 1 -->
             <div class="product-card">
