--- a/index.html
+++ b/index.html
@@ -591,6 +591,33 @@
         <h1 class="page-title">Greeting Card</h1>
 
         <div class="products-grid">
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
+                    <span class="product-badge">Desain Baru</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Graduation</h3>
+                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-actions">
+                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                        <button id="waButton4" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton4').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Graduation%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
+                        });
+                        </script>
+                    </div>
+                </div>
+            </div>
+
             <!-- Product 6 -->
             <div class="product-card">
                 <div class="product-image">
@@ -753,35 +780,6 @@
                     </div>
                     <div class="product-actions">
                         <a href="envelopefoto.html" class="btn btn-beige">Add on Gallery</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Product 4 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
-                    <span class="product-badge">Terlaris</span>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Graduation</h3>
-                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
-                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton4" class="btn btn-pink">
-                        Beli Sekarang
-                        </button>
-
-                        <script>
-                        document.getElementById('waButton4').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Graduation%20:%0A%0ANama%20Penerima%20%3A%20%0ANama%20Pengirim%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive%20jika%20%3E4%20foto)%0ANama%20website%20%3A%20flomma%20(maka%20akan%20menjadi%20https%3A%2F%2Fflomma.netlify.app%2F)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan)!%0AJika%20ada%20request%20bisa%20disampaikan!', '_blank');
-                        });
-                        </script>
-                    </div>
-                    <div class="product-actions">
-                        <a href="wisudafoto.html" class="btn btn-beige">Add on Gallery</a>
                     </div>
                 </div>
             </div>
