--- a/wisuda.html
+++ b/wisuda.html
@@ -61,7 +61,7 @@
             justify-content: center;
             align-items: center;
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
-            background-image: url('gambar/unnes.png');
+            background-image: url('gambar/unnes-removebg-preview.png');
             background-size:80%;
             background-repeat: no-repeat;
             background-position: center;
