--- a/wisuda.html
+++ b/wisuda.html
@@ -139,7 +139,7 @@
             overflow: hidden;
             position: relative;
             /* foto juara */
-            background-image: url('gambar/zacky.jpeg');
+            background-image: url('gambar/jekikk.JPG');
             background-size: cover;
             background-position: center;
             animation: elegantAppear 1s ease;
