--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Pastel Color</h3>
                     <p class="product-description">Kartu ucapan lucu dengan warna-warna pastel.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="pastel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Pastel Color', 'Pastel Color')">Beli Sekarang</button>
@@ -905,7 +905,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Monokrom</h3>
                     <p class="product-description">Kartu ucapan selamat dengan tema monokrom.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="mamba.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Monokrom', 'Monokrom')">Beli Sekarang</button>
@@ -925,7 +925,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Gold</h3>
                     <p class="product-description">Kartu ucapan dengan desain elegan dan kemasan premium.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="gold.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Gold', 'Gold')">Beli Sekarang</button>
@@ -944,7 +944,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Envelope</h3>
                     <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Envelope', 'Envelope')">Beli Sekarang</button>
@@ -963,7 +963,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Black & White</h3>
                     <p class="product-description">Kartu ucapan dengan desain minimalis yang modern dan elegan.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Black & White', 'Black White')">Beli Sekarang</button>
@@ -980,7 +980,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Gift Box</h3>
                     <p class="product-description">Hadiah ucapan selamat untuk merayakan kegembiraan dengan sebuah lagu .</p>
-                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Gift Box', 'Gift Box')">Beli Sekarang</button>
@@ -989,50 +989,7 @@
             </div>
         </div>
     </div>
-
-    <!-- Sisa kode untuk bagian Invitation dan Add On tetap sama -->
-    <div class="container">
-        <h1 class="page-title">Invitation</h1>
-
-        <div class="products-grid">
-            <!-- Product 1 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh8.png" alt="Greeting Card 3">
-                    <span class="product-badge">Comming Soon</span>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Birthday Invitation</h3>
-                    <p class="product-description">Undangan ulang tahun lucu dan unik</p>
-                    <div class="product-price">Rp 50.000</div>
-                    <div class="product-actions">
-                        <a href="birthdayinvit.html" class="btn btn-beige">Scroll Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                    <div class="product-actions">
-                        <a href="birthdayinvit2.html" class="btn btn-beige">Interactive Preview</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh9.png" alt="Greeting Card 3">
-                    <span class="product-badge">Comming Soon</span>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Promnight Invitation</h3>
-                    <p class="product-description">Undangan prom night parti yang elegan dan berkelas</p>
-                    <div class="product-price">Rp 50.000</div>
-                    <div class="product-actions">
-                        <a href="prom.html" class="btn btn-beige">Scroll Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
     <div class="container">
         <h1 class="page-title">Add On</h1>
 
@@ -1045,7 +1002,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Cinema</h3>
                     <p class="product-description">Video yang ditampilkan layaknya cinema.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="bigcinema.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1061,7 +1018,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Digicam</h3>
                     <p class="product-description">Gallery dalam bentuk digicam.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="digicam.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1076,7 +1033,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Polaroid</h3>
                     <p class="product-description">Kamera Polaroid untuk mencetak foto.</p>
-                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="polaroid1.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1092,7 +1049,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Spotify</h3>
                     <p class="product-description">Berikan playlist mu untuk orang spesial.</p>
-                    <div class="product-price">Rp 2.000</div>
+                    <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="spotify.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1109,7 +1066,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Slider Gallery</h3>
                     <p class="product-description">Tampilkan gambar satu-persatu dengan transisi memikat.</p>
-                    <div class="product-price">Rp 2.000</div>
+                    <div class="product-price">Rp 1.000/foto</div>
                     <div class="product-actions">
                         <a href="slider.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1125,7 +1082,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Grid Gallery</h3>
                     <p class="product-description">Tata letak simetris, tampilan rapi dan elegan.</p>
-                    <div class="product-price">Rp 2.000</div>
+                    <div class="product-price">Rp 1.000/foto</div>
                     <div class="product-actions">
                         <a href="grid.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1142,7 +1099,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Masonry Gallery</h3>
                     <p class="product-description">Gaya bebas tersusun artistik, tak beraturan indah.</p>
-                    <div class="product-price">Rp 2.000</div>
+                    <div class="product-price">Rp 1.000/foto</div>
                     <div class="product-actions">
                         <a href="masonry.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
@@ -1158,7 +1115,7 @@
                 <div class="product-info">
                     <h3 class="product-title">Carousel Gallery</h3>
                     <p class="product-description">Gambar bergeser dinamis seperti panggung kereta.</p>
-                    <div class="product-price">Rp 2.000</div>
+                    <div class="product-price">Rp 1.000/foto</div>
                     <div class="product-actions">
                         <a href="carousel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
