--- a/index.html
+++ b/index.html
@@ -826,6 +826,27 @@
         <h1 class="page-title">Greeting Card</h1>
 
         <div class="products-grid">
+
+            <!-- Product 5 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
+                    <span class="product-badge">Desain Baru</span>
+                    <span class="product-badge">Terlaris</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Envelope</h3>
+                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
+                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-actions">
+                        <a href="envelope.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink" onclick="openOrderModal('Envelope', 'Envelope')">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="envelopefoto.html" class="btn btn-beige">Add on Gallery</a>
+                    </div>
+                </div>
+            </div>
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
@@ -936,24 +957,7 @@
                 </div>
             </div>
 
-            <!-- Product 5 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Envelope</h3>
-                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
-                    <div class="product-price">Rp 15.000</div>
-                    <div class="product-actions">
-                        <a href="envelope.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink" onclick="openOrderModal('Envelope', 'Envelope')">Beli Sekarang</button>
-                    </div>
-                    <div class="product-actions">
-                        <a href="envelopefoto.html" class="btn btn-beige">Add on Gallery</a>
-                    </div>
-                </div>
-            </div>
+            
 
             <!-- Product 2 -->
             <div class="product-card">
