push desain baru update

--- a/envelope.html
+++ b/envelope.html
@@ -376,7 +376,7 @@
 
     <!-- Audio Element -->
     <audio id="bgMusic" loop>
-        <source src="1975.mp3" type="audio/mpeg">
+        <source src="gambar/wtos.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
@@ -436,6 +436,7 @@
                     // Kembalikan envelope-back ke belakang
                     envelopeBack.style.display = 'none';
                     hati.style.display = 'none';
+                    instruction.style.display = 'none';
                     
                     isFullView = true;
                     
