--- a/envelopefoto.html
+++ b/envelopefoto.html
@@ -382,7 +382,7 @@
 
     <!-- Audio Element -->
     <audio id="bgMusic" loop>
-        <source src="1975.mp3" type="audio/mpeg">
+        <source src="gambar/wtos.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
@@ -442,6 +442,7 @@
                     // Kembalikan envelope-back ke belakang
                     envelopeBack.style.display = 'none';
                     hati.style.display = 'none';
+                    instruction.style.display = 'none';
                     
                     isFullView = true;
                     
