--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Envelope</h3>
-                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
@@ -846,6 +846,7 @@
                     </div>
                 </div>
             </div>
+            
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
@@ -854,11 +855,45 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Graduation</h3>
-                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <p class="product-description">Sertakan 1 foto wisudawan gratis!</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="wisuda.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink" onclick="openOrderModal('Graduation', 'Graduation')">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/digicam.png" alt="Greeting Card 4">
+                    <span class="product-badge">Spesial</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Digicam</h3>
+                    <p class="product-description">Pilih 6 foto untuk ditampilkan, lebih dari 6 hanya tambah Rp1.000/foto!</p>
+                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-actions">
+                        <a href="digicam.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink" onclick="openOrderModal('Digicam', 'Digicam')">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/polaroid.png" alt="Greeting Card 4">
+                    <span class="product-badge">Spesial</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Polaroid</h3>
+                    <p class="product-description">Pilih 4 foto untuk ditampilkan, lebih dari 4 hanya tambah Rp1.000/foto!</p>
+                    <div class="product-price">Rp 15.000</div>
+                    <div class="product-actions">
+                        <a href="polaroid1.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink" onclick="openOrderModal('Polaroid', 'Polaroid')">Beli Sekarang</button>
                     </div>
                 </div>
             </div>
@@ -871,7 +906,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Vinyl</h3>
-                    <p class="product-description">Beri orang spesial playlist atau lagu favoritmu.</p>
+                    <p class="product-description">Bonus 4 foto!!</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="hero.html" class="btn btn-beige">Preview</a>
@@ -887,7 +922,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Message In A Bottle</h3>
-                    <p class="product-description">Botol berisi surat yang hanyut di tengah lautan.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="botol.html" class="btn btn-beige">Preview</a>
@@ -904,7 +939,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Pastel Color</h3>
-                    <p class="product-description">Kartu ucapan lucu dengan warna-warna pastel.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="pastel.html" class="btn btn-beige">Preview</a>
@@ -924,7 +959,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Monokrom</h3>
-                    <p class="product-description">Kartu ucapan selamat dengan tema monokrom.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="mamba.html" class="btn btn-beige">Preview</a>
@@ -944,7 +979,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Gold</h3>
-                    <p class="product-description">Kartu ucapan dengan desain elegan dan kemasan premium.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="gold.html" class="btn btn-beige">Preview</a>
@@ -965,7 +1000,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Black & White</h3>
-                    <p class="product-description">Kartu ucapan dengan desain minimalis yang modern dan elegan.</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
@@ -982,7 +1017,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Gift Box</h3>
-                    <p class="product-description">Hadiah ucapan selamat untuk merayakan kegembiraan dengan sebuah lagu .</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
@@ -1013,36 +1048,6 @@
                 </div>
             </div>
 
-            <!-- Product 5 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/digicam.png" alt="Greeting Card 5">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Digicam</h3>
-                    <p class="product-description">Gallery dalam bentuk digicam.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="digicam.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/polaroid.png" alt="Greeting Card 5">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Polaroid</h3>
-                    <p class="product-description">Kamera Polaroid untuk mencetak foto.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="polaroid1.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
 
             <!-- Product 5 -->
             <div class="product-card">
