--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-title">Envelope</h3>
-                    <p class="product-description">Tambah foto hanya Rp1.000/foto</p>
+                    <p class="product-description">Tambah foto hanya Rp1.000/foto!!</p>
                     <div class="product-price">Rp 15.000</div>
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
