--- a/index.html
+++ b/index.html
@@ -827,6 +827,36 @@
 
         <div class="products-grid">
 
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/valentinea.png" alt="Greeting Card 5"> 
+                    <span class="product-badge">Spesial</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Valentine A</h3>
+                    <p class="product-description">1 foto opsional</p>
+                    <div class="product-price">Free</div>
+                    <div class="product-actions">
+                        <a href="valentine1.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink" onclick="openOrderModal('Valentine A', 'Valentine A')">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/valentineb.png" alt="Greeting Card 5"> 
+                    <span class="product-badge">Spesial</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Valentine B</h3>
+                    <p class="product-description">1 foto opsional</p>
+                    <div class="product-price">Free</div>
+                    <div class="product-actions">
+                        <a href="valentine2.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink" onclick="openOrderModal('Valentine B', 'Valentine B')">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
             <!-- Product 5 -->
             <div class="product-card">
                 <div class="product-image">
