--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     <span class="product-badge">Spesial</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Valentine A</h3>
+                    <h3 class="product-title">Khusus Katalog Valentine</h3>
                     <p class="product-description">1 foto opsional</p>
                     <div class="product-price">Free</div>
                     <div class="product-actions">
@@ -848,7 +848,7 @@
                     <span class="product-badge">Spesial</span>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-title">Valentine B</h3>
+                    <h3 class="product-title">Khusus Katalog Valentine</h3>
                     <p class="product-description">1 foto opsional</p>
                     <div class="product-price">Free</div>
                     <div class="product-actions">
