--- a/valentine2.html
+++ b/valentine2.html
@@ -430,7 +430,7 @@
             <div class="page-front" id="pageFront">
                 <div class="photo-container">
                     <!-- Uncomment untuk gunakan foto -->
-                    <img src="gambar/jekikk.JPG" alt="Foto Valentine" class="valentine-photo"> 
+                    <img src="gambar/bgv.jpeg" alt="Foto Valentine" class="valentine-photo"> 
                     
                 </div>
                 
