--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ input[type="checkbox"] {
                         <label>Menggunakan Foto:</label>
                         <div class="radio-group">
                             <label>
-                                <input type="radio" name="photoOption" value="withPhoto" checked>
+                                <input type="radio" name="photoOption" value="withPhoto">
                                 Ya, pakai foto
                             </label>
                             <label>
